--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8001
 # \u4E3B\u6570\u636E\u6E90\uFF0C\u9ED8\u8BA4\u7684
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://10.117.61.183/gps?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
-spring.datasource.username=yiung
-spring.datasource.password=830428
+spring.datasource.url=jdbc:mysql://localhost:3306/gps?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=htsl123!
 
 # \u4E0B\u9762\u4E3A\u8FDE\u63A5\u6C60\u7684\u8865\u5145\u8BBE\u7F6E\uFF0C\u5E94\u7528\u5230\u4E0A\u9762\u6240\u6709\u6570\u636E\u6E90\u4E2D
 # \u521D\u59CB\u5316\u5927\u5C0F\u6570\uFF0C\u6700\u5C0F\u7A7A\u95F2\u6570\uFF0C\u6700\u5927\u6D3B\u52A8\u6570
